[tool.poetry]
name = "surena"
version = "0.1.3"
description = ""
authors = ["Mohammad Norouzzadegan <Norouzzadegan@gmail.com>"]
readme = "README.md"
packages = [
    { include = "surena", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8.10"
docker = "^7.0.0"
click = "^8.1.7"
types-paramiko = "^3.4.0.20240205"
paramiko = "^3.4.0"
types-requests = "^2.31.0.20240125"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^24.1.1"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
surena = "surena.__main__:cli"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

no_implicit_optional = true
strict_equality = true

warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true

pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
show_traceback = true

exclude = "venv/|env/|virtualenv/|docs/|build/"
mypy_path = "src/"

[tool.black]
preview = true
line_length = 120

[tool.isort]
profile = "black"
line_length = 88

[[tool.mypy.overrides]]
# This list should be checked periodically. Maybe, one of them becomes
# type-safe.
module = [
    "docker.*",
    "pkg_resources",
]
ignore_missing_imports = true

[tool.flake8]
per-file-ignores = [
    "__init__.py:F401",
    "conftest.py:F401,F403,E501"
]
extend-ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D200", "D202", "D205", "D301", "D400",
    "ANN101", "ANN102",
    "SIM117",
    "Q003",
    "E800",
    "CCE001"
]
inline-quotes = "double"
eradicate-whitelist-extend = "isort.*"
max-line-length = 120
